Docker tutorials 2022/KubenetesTutorials/springboot-docker-container-service.yaml
apiVersion: v1
kind: Service
metadata:
  annotations:
    kompose.cmd: kompose -f docker-compose.dev.yml convert
    kompose.version: 1.26.1 (HEAD)
  creationTimestamp: null
  labels:
    io.kompose.service: springboot-docker-container
  name: springboot-docker-container
spec:
  ports:
    - name: "8085"
      port: 8085
      targetPort: 8083
  selector:
    io.kompose.service: springboot-docker-container
status:
  loadBalancer: {}
