Docker tutorials 2022/KubenetesTutorials/springboot-app-network-networkpolicy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  creationTimestamp: null
  name: springboot-app-network
spec:
  ingress:
    - from:
        - podSelector:
            matchLabels:
              io.kompose.network/springboot-app-network: "true"
  podSelector:
    matchLabels:
      io.kompose.network/springboot-app-network: "true"
